src/app/inventory/ItemIcon.m.scss
@use '../variables.scss' as *;

$legendaryBg: #522f65;
$exoticBg: #ceae33;
$basicBg: #c3bcb4;
$rareBg: #5076a3;
$commonBg: #366f42;

// The image within the overall item. Global because it's referenced by other styles.
:global(.item-img) {
  display: block;
  width: var(--item-size);
  height: var(--item-size);
  box-sizing: border-box;
  border: $item-border-width solid #ddd;

  &:focus {
    outline: none;
  }

  // Used by vendors
  &:global(.transparent) {
    border-color: transparent;
  }

  &.legendary {
    background-color: $legendaryBg;
  }
  &.exotic {
    background-color: $exoticBg;
  }
  &.basic {
    background-color: $basicBg;
  }
  &.rare {
    background-color: $rareBg;
  }
  &.common {
    background-color: $commonBg;
  }
}

// Alternate border styles
.masterwork {
  border-color: $masterwork-border-color;
}
.deepsight {
  border-color: $deepsight-border-color;
}

// Completed items or capped stackables image
.complete {
  border-color: $gold;
}

// Engrams and packages
.borderless {
  border-color: transparent;
}

// The overlay image for masterworks and Deepsight weapons
.backgroundOverlay {
  box-sizing: border-box;
  top: $item-border-width;
  left: $item-border-width;
  border-width: 0;
  height: calc(var(--item-size) - #{2 * $item-border-width});
  width: calc(var(--item-size) - #{2 * $item-border-width});
  position: absolute;
  background-repeat: no-repeat;
  background-position: center;
  background-size: calc((var(--item-size) - #{2 * $item-border-width}) * (96 / 90))
    calc((var(--item-size) - #{2 * $item-border-width}) * (96 / 90));
}
.legendaryMasterwork {
  background-image: url('../../images/masterwork.png');
}
.exoticMasterwork {
  background-image: url('../../images/exotic-masterwork.png');
}
.deepsightBorder {
  background-image: url('../../images/deepsight.png');

  &.legendaryMasterwork {
    background-image: url('../../images/deepsight.png'), url('../../images/masterwork.png');
  }
}

.iconOverlay {
  overflow: hidden;
  top: $item-border-width;
  left: $item-border-width;
  height: calc(var(--item-size) - #{2 * $item-border-width});
  width: calc(var(--item-size) - #{2 * $item-border-width});
  position: absolute;
  & > img {
    top: 0;
    left: 0;
    height: calc(var(--item-size) - #{2 * $item-border-width});
    width: calc(var(--item-size) - #{2 * $item-border-width});
    position: absolute;
  }
}

.energyCostOverlay {
  position: absolute;
  top: $item-border-width;
  bottom: $item-border-width;
  right: $item-border-width;
  left: $item-border-width;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  pointer-events: none;
}

.energyCost {
  position: absolute;
  top: $item-border-width;
  bottom: $item-border-width;
  right: $item-border-width;
  left: $item-border-width;
  pointer-events: none;

  text {
    fill: white;
  }
}

.highlightedObjective {
  position: absolute;
  display: block;
  width: calc((var(--item-size) + 1px) / 2) !important;
  height: calc((var(--item-size) + 1px) / 2) !important;
  right: 0;
  top: calc(var(--item-size) - ((var(--item-size) + 1px) / 2) - 1px);
  pointer-events: none;
}

.deepsightPattern {
  $size: 12;
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: calc(var(--item-size) * #{$size / 100}) solid $deepsight-border-color;
  border-top-color: transparent;
  border-left-color: transparent;
  right: 0;
  top: calc(var(--item-size) - (var(--item-size) * #{$size / 50}) - 1px);
  pointer-events: none;
}

.bucketIcon {
  filter: invert(1);
  border-color: #222;
}

